[package]
name = "sneks"
version = "0.1.0"
edition = "2021"
authors = ["Offchain Labs"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/OffchainLabs/sneks"
repository = "https://github.com/OffchainLabs/sneks"
description = "simple macros for naming enum variants"

[dependencies]
convert_case = "0.6.0"
quote = "1.0.33"
syn = { version = "2.0.37", features = ["full"] }

[lib]
proc-macro = true
